--- a/change-password.html
+++ b/change-password.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ferrari - Hcode Lab</title>
+    <title>Ferrari - hcode Lab</title>
     <link rel="apple-touch-icon" sizes="57x57" href="assets/images/apple-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="60x60" href="assets/images/apple-icon-60x60.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-icon-72x72.png" />
@@ -19,17 +19,15 @@
     <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicon-96x96.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png" />
     <link rel="manifest" href="manifest.json" />
-    <meta name="msapplication-TileColor" content="#E1DEDD" />
+    <meta name="msapplication-TileColor" content="##E5E3DF" />
     <meta name="msapplication-TileImage" content="assets/images/ms-icon-144x144.png" />
-    <meta name="theme-color" content="#E1DEDD" />
-    <meta name="description" content="Conheça a Ferrari Auto Center" />
-    <link rel="stylesheet" href="assets/css/main.css" type="text/css" />
+    <meta name="theme-color" content="##E5E3DF" />
+    <meta name="description" content="Conheça a Ferrari Auto Center">
+    <link rel="stylesheet" href="assets/css/main.css" type="text/css">
 </head>
 
 <body>
-
     <header id="header">
-
         <div class="overlay"></div>
         <a href="index.html#home"><img src="assets/images/ferrari-logo.svg" class="logo" alt="Logo Ferrari" /></a>
         <button type="button" id="btn-open">
@@ -42,21 +40,21 @@
         <div class="menu">
             <nav>
                 <button type="button" id="btn-close">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                        <path d="M0,0H24V24H0Z" fill="none" />
-                        <path
+                    <svg id="close-24px" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                        <path id="Caminho_244" data-name="Caminho 244" d="M0,0H24V24H0Z" fill="none" />
+                        <path id="Caminho_245" data-name="Caminho 245"
                             d="M19,6.41,17.59,5,12,10.59,6.41,5,5,6.41,10.59,12,5,17.59,6.41,19,12,13.41,17.59,19,19,17.59,13.41,12Z" />
-                        </svg>
+                    </svg>
                 </button>
                 <ul>
                     <li><a href="index.html#home">Home</a></li>
                     <li><a href="index.html#service">Revisão</a></li>
                     <li><a href="index.html#contact">Contato</a></li>
-                    <li class="divider">
-                        <hr />
+                    <li>
+                        <hr class="divider" />
                     </li>
                     <li class="hide-guest"><a href="schedules.html">Agendamentos</a></li>
-                    <li class="hide-guest"><a href="profile.html">Editar Dados</a></li>
+                    <li class="hide-guest"><a href="profile.html">Perfil</a></li>
                     <li class="hide-guest"><a href="change-photo.html">Mudar Foto</a></li>
                     <li class="hide-guest"><a href="change-password.html">Alterar Senha</a></li>
                 </ul>
@@ -65,7 +63,7 @@
                 <hr />
                 <div>
                     <picture>
-                        <a href="profile.html"><img src="assets/images/user.png" alt="João Rangel" /></a>
+                        <a href="profile.html"><img src="assets/images/user.png" alt="João Rangel"></a>
                     </picture>
                     <div>
                         <a href="profile.html">
@@ -87,94 +85,51 @@
         <hr class="italy" />
     </header>
 
-    <section class="page blue" id="schedules-new">
+    <section class="page" id="change-photo">
 
         <header>
-            <h1>Escolha a Data</h1>
+            <h1>Alterar Senha</h1>
         </header>
 
         <main>
 
-            <div class="calendar">
+            <form>
 
-                <div class="month">
+                <form class="forget">
 
-                    <button type="button" class="btn-today">Hoje</button>
+                    <div class="wrap">
+                        <h1 class="h1-title">Informe sua senha</h1>
 
-                    <h2>Junho 2020</h2>
+                        <hr />
+                    </div>
 
-                    <nav>
-                        <button type="button" class="btn-prev">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="7.41" height="12" viewBox="0 0 7.41 12">
-                                <path d="M10,6,8.59,7.41,13.17,12,8.59,16.59,10,18l6-6Z"
-                                    transform="translate(16 18) rotate(180)" fill="#9a9a99" /></svg>
-                        </button>
-                        <button type="button" class="btn-next">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="7.41" height="12" viewBox="0 0 7.41 12">
-                                <path d="M10,6,8.59,7.41,13.17,12,8.59,16.59,10,18l6-6Z" transform="translate(-8.59 -6)"
-                                    fill="#9a9a99" /></svg>
-                        </button>
-                    </nav>
 
-                </div>
 
-                <ul class="weekdays">
-                    <li>Dom</li>
-                    <li>Seg</li>
-                    <li>Ter</li>
-                    <li>Qua</li>
-                    <li>Qui</li>
-                    <li>Sex</li>
-                    <li>Sáb</li>
-                </ul>
+                    <div class="field">
+                        <input type="email" name="email" id="email-login">
+                        <label for="email-login">Senha atual</label>
+                    </div>
 
-                <ul class="days">
-                    <li class="month-prev">28</li>
-                    <li class="month-prev">29</li>
-                    <li class="month-prev">30</li>
-                    <li>1</li>
-                    <li class="active">2</li>
-                    <li>3</li>
-                    <li>4</li>
-                    <li>5</li>
-                    <li>6</li>
-                    <li>7</li>
-                    <li>8</li>
-                    <li>9</li>
-                    <li class="selected">10</li>
-                    <li>11</li>
-                    <li>12</li>
-                    <li>13</li>
-                    <li>14</li>
-                    <li>15</li>
-                    <li>16</li>
-                    <li>17</li>
-                    <li>18</li>
-                    <li>19</li>
-                    <li>20</li>
-                    <li>21</li>
-                    <li>22</li>
-                    <li>23</li>
-                    <li>24</li>
-                    <li>25</li>
-                    <li>26</li>
-                    <li>27</li>
-                    <li>28</li>
-                    <li>29</li>
-                    <li>30</li>
-                    <li>31</li>
-                    <li class="month-next">1</li>
-                </ul>
+                    <div class="wrap">
+                        <h1 class="h1-title">Crie uma nova senha</h1>
 
-            </div>
+                        <hr />
+                    </div>
 
-            <form action="schedules-time-options.html">
+                    <div class="field">
+                        <input type="email" name="email" id="email-login">
+                        <label for="email-login">Nova Senha</label>
+                    </div>
+
+                    <div class="field">
+                        <input type="email" name="email" id="email-login">
+                        <label for="email-login">Confirme a nova senha</label>
+                    </div>
+
+                </form>
 
                 <footer class="fixed">
-
-                    <a href="index.html">Voltar</a>
-                    <button type="submit">Continuar</button>
-
+                    <button type="submit">Salvar</button>
                 </footer>
             </form>
 
